--- a/Wonton.CrossUI.Web.HostApp/skeleton.html
+++ b/Wonton.CrossUI.Web.HostApp/skeleton.html
@@ -25,6 +25,8 @@
     .upside {
         height: 100px;
         background-color: #495A80;
+        -webkit-app-region: drag;
+        -webkit-user-select: none;
     }
 
     .downside {
